--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-	"test:dev": "./node_modules/mocha/bin/mocha ./test/**/*.js --watch"
+    "test:dev": "./node_modules/mocha/bin/mocha ./test/**/*.js --watch",
+    "test:debug": "./node_modules/mocha/bin/mocha ./test/**/*.js --inspect-brk"
   },
   "author": "",
   "license": "ISC",
@@ -13,6 +14,7 @@
     "eslint": "^4.18.2",
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-prettier": "^2.6.0",
+    "jqtpl": "^2.0.16-rc1",
     "mocha": "^5.0.4",
     "prettier": "^1.11.1"
   }
