--- a/package.json
+++ b/package.json
@@ -7,15 +7,19 @@
     "test:dev": "./node_modules/mocha/bin/mocha ./test/**/*.js --watch",
     "test:debug": "./node_modules/mocha/bin/mocha ./test/**/*.js --inspect-brk"
   },
-  "author": "",
+  "author": "Bojan Makljenovic",
   "license": "ISC",
   "devDependencies": {
     "chai": "^4.1.2",
     "eslint": "^4.18.2",
     "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-chai-friendly": "^0.4.1",
     "eslint-plugin-prettier": "^2.6.0",
     "jqtpl": "^2.0.16-rc1",
     "mocha": "^5.0.4",
     "prettier": "^1.11.1"
+  },
+  "dependencies": {
+    "jsep": "^0.3.3"
   }
 }
