HTML template parser

--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "prettier": "^1.11.1"
   },
   "dependencies": {
+    "cheerio": "^1.0.0-rc.2",
+    "glob": "^7.1.2",
     "jsep": "^0.3.3"
   }
 }
