Create handlebars converter for expression and all statements except wrap. Minor refactor of the code.

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "cheerio": "^1.0.0-rc.2",
     "glob": "^7.1.2",
+    "html-beautify": "^1.0.4",
     "jsep": "^0.3.3"
   }
 }
