Support multiline parse. View refactor.

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "prismjs": "^1.14.0",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
+    "uuid": "^3.2.1",
     "whatwg-fetch": "^2.0.4"
   }
 }
