--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test:debug": "./node_modules/mocha/bin/mocha ./test/**/*.js --inspect-brk",
     "start": "node ./src/app.js",
     "start:debug": "nodemon --inspect ./src/app.js -- --config ./src/default.json",
-    "build": "node_modules\\.bin\\webpack -d --config src/public/webpack.config.js",
+    "build": "node_modules\\.bin\\webpack -p --optimize-minimize --config src/public/webpack.config.js --env prod",
+    "build-dev": "node_modules\\.bin\\webpack -d --config src/public/webpack.config.js --env dev",
     "dev-server": "node_modules\\.bin\\webpack-dev-server -d --config src/public/webpack.config.js --hot --inline"
   },
   "author": "Bojan Makljenovic",
@@ -20,12 +21,15 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "chai": "^4.1.2",
+    "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^0.28.11",
     "eslint": "^4.18.2",
     "eslint-config-prettier": "^2.9.0",
+    "eslint-loader": "^2.0.0",
     "eslint-plugin-chai-friendly": "^0.4.1",
     "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-react": "^7.7.0",
+    "extract-text-webpack-plugin": "^3.0.2",
     "jqtpl": "^2.0.16-rc1",
     "mocha": "^5.0.4",
     "nodemon": "^1.17.3",
