--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start:debug": "nodemon --inspect ./src/app.js -- --config ./src/default.json",
     "build": "node_modules\\.bin\\webpack -p --optimize-minimize --config src/public/webpack.config.js --env prod",
     "build-dev": "node_modules\\.bin\\webpack -d --config src/public/webpack.config.js --env dev",
-    "dev-server": "node_modules\\.bin\\webpack-dev-server -d --config src/public/webpack.config.js --hot --inline"
+    "dev-server": "node_modules\\.bin\\webpack-dev-server -d --config src/public/webpack.config.js --hot --inline",
+    "lint:css": "node_modules\\.bin\\stylelint ./src/public/resources/**/*.css ./src/public/js/**/*.css"
   },
   "author": "Bojan Makljenovic",
   "license": "ISC",
@@ -34,8 +35,13 @@
     "mocha": "^5.0.4",
     "nodemon": "^1.17.3",
     "prettier": "^1.11.1",
+    "prettier-stylelint": "^0.4.2",
     "react-hot-loader": "^3.1.3",
     "style-loader": "^0.20.3",
+    "stylelint": "^9.2.1",
+    "stylelint-config-prettier": "^3.2.0",
+    "stylelint-config-standard": "^18.2.0",
+    "stylelint-webpack-plugin": "^0.10.4",
     "webpack": "^3.11.0",
     "webpack-dev-server": "^2.11.2",
     "webpack-merge": "^4.1.2"
