--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "express": "^4.16.3",
     "glob": "^7.1.2",
     "jsep": "^0.3.3",
+    "node-zip": "^1.1.1",
     "prismjs": "^1.14.0",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
