Support template editing in server mode

--- a/package.json
+++ b/package.json
@@ -1,65 +1,73 @@
 {
-  "name": "jquery-tmpl-converter",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test:dev": "./node_modules/mocha/bin/mocha ./test/**/*.js --watch",
-    "test:debug": "./node_modules/mocha/bin/mocha ./test/**/*.js --inspect-brk",
-    "start": "node ./src/app.js",
-    "start:debug": "nodemon --inspect ./src/app.js -- --files /home/maklja/test/node_test/test/converter/**/*.html,/home/maklja/www/*.htm --server",
-    "start:debug:no-server": "nodemon --inspect ./src/app.js --files /home/maklja/test/node_test/test/converter/**/*.html,/home/maklja/www/*.htm --output ./results --converter hbs",
-    "build": "node_modules\\.bin\\webpack -p --optimize-minimize --config src/public/webpack.config.js --env prod",
-    "build-dev": "node_modules\\.bin\\webpack -d --config src/public/webpack.config.js --env dev",
-    "dev-server": "node_modules\\.bin\\webpack-dev-server -d --config src/public/webpack.config.js --hot --inline --env dev",
-    "lint:css": "node_modules\\.bin\\stylelint ./src/public/resources/**/*.css ./src/public/js/**/*.css"
-  },
-  "author": "Bojan Makljenovic",
-  "license": "ISC",
-  "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-loader": "^7.1.4",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "chai": "^4.1.2",
-    "clean-webpack-plugin": "^0.1.19",
-    "css-loader": "^0.28.11",
-    "eslint": "^4.18.2",
-    "eslint-config-prettier": "^2.9.0",
-    "eslint-loader": "^2.0.0",
-    "eslint-plugin-chai-friendly": "^0.4.1",
-    "eslint-plugin-prettier": "^2.6.0",
-    "eslint-plugin-react": "^7.7.0",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "jqtpl": "^2.0.16-rc1",
-    "mocha": "^5.0.4",
-    "nodemon": "^1.17.3",
-    "prettier": "^1.11.1",
-    "prettier-stylelint": "^0.4.2",
-    "react-hot-loader": "^3.1.3",
-    "style-loader": "^0.20.3",
-    "stylelint": "^9.2.1",
-    "stylelint-config-prettier": "^3.2.0",
-    "stylelint-config-standard": "^18.2.0",
-    "stylelint-webpack-plugin": "^0.10.4",
-    "webpack": "^3.11.0",
-    "webpack-dev-server": "^2.11.2",
-    "webpack-merge": "^4.1.2"
-  },
-  "dependencies": {
-    "babel-polyfill": "^6.26.0",
-    "cheerio": "^1.0.0-rc.2",
-    "commander": "^2.15.1",
-    "express": "^4.16.3",
-    "glob": "^7.1.2",
-    "jsep": "^0.3.3",
-    "node-zip": "^1.1.1",
-    "prismjs": "^1.14.0",
-    "react": "^16.3.1",
-    "react-dom": "^16.3.1",
-    "react-modal": "^3.4.4",
-    "uuid": "^3.2.1",
-    "whatwg-fetch": "^2.0.4"
-  }
+	"name": "jquery-tmpl-converter",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"test": "./node_modules/mocha/bin/mocha ./test/**/*.js",
+		"test:dev": "./node_modules/mocha/bin/mocha ./test/**/*.js --watch",
+		"test:debug":
+			"./node_modules/mocha/bin/mocha ./test/**/*.js --inspect-brk",
+		"start": "node ./src/app.js",
+		"start:debug":
+			"nodemon --inspect ./src/app.js -- --files /home/maklja/test/node_test/test/converter/**/*.html,/home/maklja/www/*.htm --server",
+		"start:debug:no-server":
+			"nodemon --inspect ./src/app.js --files /home/maklja/test/node_test/test/converter/**/*.html,/home/maklja/www/*.htm --output ./results --converter hbs",
+		"build":
+			"node_modules\\.bin\\webpack -p --optimize-minimize --config src/public/webpack.config.js --env prod",
+		"build-dev":
+			"node_modules\\.bin\\webpack -d --config src/public/webpack.config.js --env dev",
+		"dev-server":
+			"node_modules\\.bin\\webpack-dev-server -d --config src/public/webpack.config.js --hot --inline --env dev",
+		"lint:css":
+			"node_modules\\.bin\\stylelint ./src/public/resources/**/*.css ./src/public/js/**/*.css"
+	},
+	"author": "Bojan Makljenovic",
+	"license": "ISC",
+	"devDependencies": {
+		"babel-cli": "^6.26.0",
+		"babel-loader": "^7.1.4",
+		"babel-preset-env": "^1.6.1",
+		"babel-preset-es2015": "^6.24.1",
+		"babel-preset-react": "^6.24.1",
+		"chai": "^4.1.2",
+		"clean-webpack-plugin": "^0.1.19",
+		"css-loader": "^0.28.11",
+		"eslint": "^4.18.2",
+		"eslint-config-prettier": "^2.9.0",
+		"eslint-loader": "^2.0.0",
+		"eslint-plugin-chai-friendly": "^0.4.1",
+		"eslint-plugin-prettier": "^2.6.0",
+		"eslint-plugin-react": "^7.7.0",
+		"extract-text-webpack-plugin": "^3.0.2",
+		"jqtpl": "^2.0.16-rc1",
+		"mocha": "^5.0.4",
+		"nodemon": "^1.17.3",
+		"prettier": "^1.11.1",
+		"prettier-stylelint": "^0.4.2",
+		"react-hot-loader": "^3.1.3",
+		"style-loader": "^0.20.3",
+		"stylelint": "^9.2.1",
+		"stylelint-config-prettier": "^3.2.0",
+		"stylelint-config-standard": "^18.2.0",
+		"stylelint-webpack-plugin": "^0.10.4",
+		"webpack": "^3.11.0",
+		"webpack-dev-server": "^2.11.2",
+		"webpack-merge": "^4.1.2"
+	},
+	"dependencies": {
+		"babel-polyfill": "^6.26.0",
+		"cheerio": "^1.0.0-rc.2",
+		"commander": "^2.15.1",
+		"express": "^4.16.3",
+		"glob": "^7.1.2",
+		"jsep": "^0.3.3",
+		"node-zip": "^1.1.1",
+		"prismjs": "^1.14.0",
+		"react": "^16.3.1",
+		"react-dom": "^16.3.1",
+		"react-modal": "^3.4.4",
+		"uuid": "^3.2.1",
+		"whatwg-fetch": "^2.0.4"
+	}
 }
