--- a/package.json
+++ b/package.json
@@ -1,8 +1,24 @@
 {
 	"name": "jquery-tmpl-convert",
 	"version": "1.0.0",
-	"description": "",
+	"description":
+		"Application created to help migration from deprecated jQuery templates library. Application convertes jQuery templates to handlebars templates. Supports both CLI and server preview for interactive templates converting. Can be extended to convert to other templates type.",
+	"keywords": [
+		"jQuery",
+		"jQuery-tmpl",
+		"jQuery template",
+		"handlebars",
+		"convert",
+		"migrate",
+		"template"
+	],
 	"main": "index.js",
+	"homepage": "https://github.com/maklja/jquery-tmpl-convert#readme",
+	"bugs": "https://github.com/maklja/jquery-tmpl-convert/issues",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/maklja/jquery-tmpl-convert.git"
+	},
 	"scripts": {
 		"test": "./node_modules/mocha/bin/mocha ./test/**/*.js",
 		"test:dev": "./node_modules/mocha/bin/mocha ./test/**/*.js --watch",
