--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
 		"migrate",
 		"template"
 	],
-	"main": "index.js",
+	"main": "./src/ndex.js",
+	"bin": {
+		"jquery-tmpl-convert": "./src/app.js"
+	},
 	"homepage": "https://github.com/maklja/jquery-tmpl-convert#readme",
 	"bugs": "https://github.com/maklja/jquery-tmpl-convert/issues",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/maklja/jquery-tmpl-convert.git"
 	},
+	"engines": { "node": ">=6.10.2", "npm": ">=3.10.10" },
 	"scripts": {
 		"test": "./node_modules/mocha/bin/mocha ./test/**/*.js",
 		"test:dev": "./node_modules/mocha/bin/mocha ./test/**/*.js --watch",
@@ -39,35 +43,37 @@
 			"node_modules\\.bin\\stylelint ./src/public/resources/**/*.css ./src/public/js/**/*.css"
 	},
 	"author": "Bojan Makljenovic",
+	"contributors": [],
 	"license": "MIT",
 	"devDependencies": {
 		"babel-cli": "^6.26.0",
 		"babel-loader": "^7.1.4",
-		"babel-preset-env": "^1.6.1",
+		"babel-preset-env": "^1.7.0",
 		"babel-preset-es2015": "^6.24.1",
 		"babel-preset-react": "^6.24.1",
 		"chai": "^4.1.2",
 		"clean-webpack-plugin": "^0.1.19",
 		"css-loader": "^0.28.11",
-		"eslint": "^4.18.2",
+		"eslint": "^4.19.1",
 		"eslint-config-prettier": "^2.9.0",
 		"eslint-loader": "^2.0.0",
 		"eslint-plugin-chai-friendly": "^0.4.1",
 		"eslint-plugin-prettier": "^2.6.0",
-		"eslint-plugin-react": "^7.7.0",
+		"eslint-plugin-react": "^7.8.2",
 		"extract-text-webpack-plugin": "^3.0.2",
 		"jqtpl": "^2.0.16-rc1",
-		"mocha": "^5.0.4",
-		"nodemon": "^1.17.3",
-		"prettier": "^1.11.1",
+		"mocha": "^5.2.0",
+		"nodemon": "^1.17.5",
+		"postcss-syntax": "^0.10.0",
+		"prettier": "^1.13.0",
 		"prettier-stylelint": "^0.4.2",
 		"react-hot-loader": "^3.1.3",
 		"style-loader": "^0.20.3",
 		"stylelint": "^9.2.1",
 		"stylelint-config-prettier": "^3.2.0",
 		"stylelint-config-standard": "^18.2.0",
-		"stylelint-webpack-plugin": "^0.10.4",
-		"webpack": "^3.11.0",
+		"stylelint-webpack-plugin": "^0.10.5",
+		"webpack": "^3.12.0",
 		"webpack-dev-server": "^2.11.2",
 		"webpack-merge": "^4.1.2"
 	},
@@ -77,11 +83,11 @@
 		"commander": "^2.15.1",
 		"express": "^4.16.3",
 		"glob": "^7.1.2",
-		"jsep": "^0.3.3",
+		"jsep": "^0.3.4",
 		"node-zip": "^1.1.1",
 		"prismjs": "^1.14.0",
-		"react": "^16.3.1",
-		"react-dom": "^16.3.1",
+		"react": "^16.4.0",
+		"react-dom": "^16.4.0",
 		"react-modal": "^3.4.4",
 		"uuid": "^3.2.1",
 		"whatwg-fetch": "^2.0.4"
