--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
 	"name": "jquery-tmpl-convert",
 	"version": "1.0.0",
-	"description":
-		"Application created to help migration from deprecated jQuery templates library. Application convertes jQuery templates to handlebars templates. Supports both CLI and server preview for interactive templates converting. Can be extended to convert to other templates type.",
+	"description": "Application is created to help in migration from deprecated jQuery template library. Application is able to converte jQuery template to handlebar templates. Application supports two working modes: command-line interface(CLI) and server preview for interactive template converting. If needed application can be extended to convert other template types.",
 	"keywords": [
 		"jQuery",
 		"jQuery-tmpl",
@@ -22,25 +21,21 @@
 		"type": "git",
 		"url": "https://github.com/maklja/jquery-tmpl-convert.git"
 	},
-	"engines": { "node": ">=6.10.2", "npm": ">=3.10.10" },
+	"engines": {
+		"node": ">=6.10.2",
+		"npm": ">=3.10.10"
+	},
 	"scripts": {
 		"test": "./node_modules/mocha/bin/mocha ./test/**/*.js",
 		"test:dev": "./node_modules/mocha/bin/mocha ./test/**/*.js --watch",
-		"test:debug":
-			"./node_modules/mocha/bin/mocha ./test/**/*.js --inspect-brk",
+		"test:debug": "./node_modules/mocha/bin/mocha ./test/**/*.js --inspect-brk",
 		"start": "node ./src/app.js",
-		"start:debug":
-			"nodemon --inspect ./src/app.js -- --files /home/maklja/test/node_test/test/converter/**/*.html,/home/maklja/www/*.htm --server",
-		"start:debug:no-server":
-			"nodemon --inspect ./src/app.js --files /home/maklja/test/node_test/test/converter/**/*.html,/home/maklja/www/*.htm --output ./results --converter hbs",
-		"build":
-			"node_modules\\.bin\\webpack -p --optimize-minimize --config src/public/webpack.config.js --env prod",
-		"build-dev":
-			"node_modules\\.bin\\webpack -d --config src/public/webpack.config.js --env dev",
-		"dev-server":
-			"node_modules\\.bin\\webpack-dev-server -d --config src/public/webpack.config.js --hot --inline --env dev",
-		"lint:css":
-			"node_modules\\.bin\\stylelint ./src/public/resources/**/*.css ./src/public/js/**/*.css"
+		"start:debug": "nodemon --inspect ./src/app.js -- --server",
+		"start:debug:no-server": "nodemon --inspect ./src/app.js --output ./results --converter hbs",
+		"build": "node_modules\\.bin\\webpack -p --optimize-minimize --config src/public/webpack.config.js --env prod",
+		"build-dev": "node_modules\\.bin\\webpack -d --config src/public/webpack.config.js --env dev",
+		"dev-server": "node_modules\\.bin\\webpack-dev-server -d --config src/public/webpack.config.js --hot --inline --env dev",
+		"lint:css": "node_modules\\.bin\\stylelint ./src/public/resources/**/*.css ./src/public/js/**/*.css"
 	},
 	"author": "Bojan Makljenovic",
 	"contributors": [],
